= Favicon

== 0.4.0 2023-
. Add `-v` for display version
. Update `-h`
. Update image 0.24.5

== 0.3.0 2022-07-14
. Update doc
. Fixed bug

== 0.2.0 2022-05-09
. Change image generator with async
. Fixed bug

== 0.1.0 2022-05-02
. Generator favicon images