@@ -9,8 +9,8 @@ readme = "README.adoc"
 keywords = ["cli", "favicon"]
 categories = ["command-line-utilities"]
 homepage = "https://github.com/leonardwoo/favicon-rs"
-build = "build.rs"
 publish = true
+build = "build.rs"
 
 [[bin]]
 name = "favicon"
@@ -22,7 +22,7 @@ image = "0.24.5"
 futures = "0.3"
 
 [package.metadata.winres]
-FileDescription = "Favicon Rust"
+FileDescription = "Favicon toolkit with Rust"
 LegalCopyright = "Copyright © Leonard Woo"
 OriginalFilename = "favicon.exe"
 ProductName = "Favicon"
