@@ -2,8 +2,9 @@
 
 == 0.4.0 2023-
 . Add `-v` for display version
-. Update `-h`
+. Update help
 . Update image 0.24.5
+. Update Copyright
 
 == 0.3.0 2022-07-14
 . Update doc
